Adjust file metadata to be inline with document README_metadata.md, remove unnecessary functions
